# FragBro

./: .gitignore  .gitkeep  BACKLOG.md  FUTURE_FEATURES.md  GLOSSARY.md  PROJECT_CONTEXT.md  README.md  generate_og.py  index.html  pyproject.toml  requirements.txt  styles.css
data/: fragbro.db
docs/: data_model.md  weeklog.md
frontend/src/: App.css  App.jsx  FragranceCard.jsx  Stats.jsx  config.js
src/: App.jsx
src/fragbro/: api.py  cli.py  database.py  seed.py  seed_personal.py
src/fragbro.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  conftest.py  test_api.py  test_database.py  test_seed.py
web/: index.html
