[project]
name = "fragbro"
version = "0.1.0"
description = "Fragrance collection analytics — a SQL query layer over a personal SQLite database."
authors = [
    { name = "Abdullah", email = "abdullahnyle@icloud.com" }
]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "typer",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"] 
[project.scripts]
fragbro = "fragbro.cli:app"